assets/main.css
/* ... */
h2 {
	font-size: calc(var(--base-fontsize) * var(--header-scale) * var(--header-scale-minor) * var(--header-scale-minor));
	margin-top: calc(var(--line-height) * 1.1rem);
}
h3 {
	font-size: calc(var(--base-fontsize) * var(--header-scale) * var(--header-scale-minor));
}
h4 {
	font-size: calc(var(--base-fontsize) * var(--header-scale));
}
h5 {
	font-size: var(--base-fontsize);
}
h6 {
	font-size: calc(var(--base-fontsize) / var(--header-scale));
}

blockquote {
	margin-left: 0;
	padding-left: 1.25rem;
	border-left: 3px solid var(--text-light);
	opacity: .82;
}

table {
	border-collapse: collapse;
	width: 100%;
}
table caption {
	font-weight: bold;
	margin-bottom: .5rem;
}
td,
th {
	border: 1px solid var(--border-light);
	text-align: left;
	padding: .5rem;
}
th:empty {
    visibility: hidden;
}
th {
	background: var(--accent-bg-light);
	font-weight: bold;
}

small {
    font-size: .8rem;
    color: var(--text-light);
}

ul li {
    /* Fix sizing of tap target when it's a list of links */
    margin-bottom: 0.5rem;
}

/* Use mono font for code like elements */
code,
pre,
pre span,
kbd,
samp {
	font-family: var(--mono-font);
	font-size: 98%;
}

/* Inline code snips hopefully */
:not(pre)>code, :not(pre)>samp, kbd {
    background-color: var(--code-bg);
    border: 1px solid var(--border-light);
    /* border-radius: 6px; */
    padding: .01em .1em;
}

kbd {
	color: var(--preformatted);
	border: 1px solid var(--preformatted);
	border-bottom: 3px solid var(--preformatted);
	border-radius: 5px;
	padding: .1rem;
}

/* This would be overridden by chroma if the page wants highlighting */
pre {
	padding: .8rem 1rem;
	max-width: 100%;
	overflow: auto;
	color: var(--preformatted);
	background: var(--accent-bg-light);
	border: 1px solid var(--border-light);
	border-radius: 0;
}

/* Fix embedded code within pre */
pre code {
	color: var(--preformatted);
	background: none;
	margin: 0;
	padding: 0;

	tab-size: 4;
}

fieldset {
	border: 0;
	padding: 0;
	margin: 0;
}

hr {
	color: var(--border-light);
	border-color: var(--border-light);
	border-style: solid;
	border-width: 1px;
	margin: 1rem auto;
}

mark {
	padding: 2px 5px;
	border-radius: 4px;
	background: var(--marked);
}

main img, main video {
	max-width: 100%;
	border-radius: 5px;
}

figure {
	margin: 0;
}

figcaption {
	font-size: .9rem;
	color: var(--text-light);
	text-align: center;
	margin-bottom: 1rem;
}

/* Format the expanding box */
details {
	padding: .6rem 1rem;
	border: 2px solid var(--border-light);
	margin-bottom: 1rem;
}

summary {
	cursor: pointer;
	font-weight: bold;
}

details[open] {
	padding-bottom: .75rem;
}

details[open] summary {
	margin-bottom: .5rem;
}

details[open]>*:last-child {
	margin-bottom: 0;
}

/*******************************************************************
 * Nav
 */
nav {
    margin-right: 5%;
    margin-left: 5%;
    margin-bottom: 4rem;
    padding: 1rem 0.3rem;
    padding-top: 1.5rem;
    font-weight: 500;
}

nav div {
    display: inline;
}

nav a {
	text-decoration: none;
	color: var(--link-alt);
}

/* To have the left nav item (homepage) and right items (other pages) display
 * on same line */
nav .nav-left a {
    margin-top: 1rem;
    font-weight: 650;
    padding-bottom: 0;
}
nav .nav-left a, nav ul li {
    margin-right: 1.5rem;
}

@media (min-width: 601px) {
    nav .nav-right {
        float: right;
    }
}
@media (max-width: 600px) {
    /* Center-aligned nav on mobile */
    nav {
        margin: 0;
        padding: 0;
        text-align: center;
    }
    nav a .pfp-name {
        color: var(--text);
    }
}

nav .selected {
    border-bottom: 2.5px solid;
}

/* Idea from seirdy.one to have unstyled unordered-list nav */
nav ul, nav a {
	padding: 0;
	padding-bottom: 0.5rem;
}
nav ul li, nav strong > a {
	display: inline-block;
}

.pfp {
    border: 1px solid var(--border);
    border-radius: .35em;
}

.pfp-name {
	text-decoration: none;
	padding-left: 6px;
	padding-top: 0;
}

nav .pfp {
    height: 1.7rem;
    vertical-align: middle;
}

nav .pfp-name {
	/* color: var(--accent-light); /1* Consistency with other nav items *1/ */
    /* To have the icon and the text (.pfp-text) align */
	display: table;
}

h1 .pfp {
    height: 2.5rem;
    vertical-align: text-top;
}

nav .pfp-text {
    /* TODO: Hardcoded alignment is ugly. Please find a better fix */
    vertical-align: top;
    padding-left: 0.5rem;
    padding-top: 0.1rem;
    font-size: 1.1rem;
    display: inline-block;
}

/*******************************************************************
 * Homepage
 */
.hero {
    margin-bottom: 5rem;
    text-align: center;
}

.hero h1 {
    font-size: 2.2rem;
}

.blink {
    opacity: 0;
    color: var(--text-light);
    animation: blinker 1s step-start 5;
    font-family: var(--mono-font);
}
@keyframes blinker {
    50% {
        opacity: 100%;
    }
}

.webrings {
  text-align: center;
}
.webrings ul {
  list-style: none;
  padding: 0;
  margin: 0;
}
@media (min-width: 601px) {
  /* Two columns on desktop */
  .webrings ul {
    display: flex;
    flex-wrap: wrap;
  }
  .webrings li {
    width: calc(50% - 0.5rem);
  }
  .webrings li p {
    margin: 0;
  }
  .webrings li:nth-child(odd) {
    margin-right: 1rem;
  }
  /* If there's an even number of children, make the first one take the full
   * width */
  .webrings :has(li :last-child:nth-child(odd)) li:first-child {
    width: 100%;
  }
  .webrings :has(li :last-child:nth-child(odd)) li:nth-child(odd) {
    margin-right: 0;
  }
  .webrings :has(li :last-child:nth-child(odd)) li:nth-child(even) {
    margin-right: 1rem;
  }
}
.webrings li p {
	display: flex;
	justify-content: space-between;
	align-items: center;
	gap: 1rem;
  text-align: center;
	vertical-align: middle;
  margin-top: 0;
	padding: 0.2rem 1rem;
	border: 2px solid var(--border-light);
	background-color: var(--accent-bg-light);
}
.webrings li {
  margin-bottom: 1.2rem;
}
.webrings a.arrow {
  font-size: 1.5rem;
  text-decoration: none;
}

.badges img {
  height: 40px;
}
/* ... */

